# pengolodh

./: README.md  pengolodh.tcss  pyproject.toml  tui.py
projguten/: search_script.py
src/pengolodh/: cli.py  config.py  epub.py  extract.py
